<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/SubPage"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@+id/listTitle" android:text="@string/title_vendor" style="@style/TopicTitle" />
    <LinearLayout style="@style/ListTabs">
        <Button android:text="@string/tab_task" android:onClick="gotoTasks" style="@style/ListTab" />
        <Button android:text="@string/tab_checklist" android:onClick="gotoItems" style="@style/ListTab" />
        <Button android:text="@string/tab_budget" android:onClick="gotoBudgets" style="@style/ListTab" />
        <Button android:text="@string/tab_schedule" android:onClick="gotoSchedules" style="@style/ListTab" />
        <Button android:text="@string/tab_vendor" style="@style/ListTabOn" />
    </LinearLayout>
    <ListView android:id="@+id/listVendors" style="@style/ListViewWeight" />
    <LinearLayout style="@style/Toolbar">
        <Button android:text="@string/btn_new_vendor" android:onClick="openNewVendorDialog" style="@style/ButtonAdd" />
    </LinearLayout>
    <TextView android:id="@+id/help" android:text="@string/help_vendors" style="@style/PageHelp" />
</LinearLayout>