<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/SubPage"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/listTitle"
        style="@style/TopicTitle"
        android:text="@string/title_topic" />

    <LinearLayout style="@style/ListTabs">

        <Button
            style="@style/ListTab"
            android:onClick="gotoTasks"
            android:text="@string/tab_task" />

        <Button
            style="@style/ListTabOn"
            android:text="@string/tab_checklist" />

        <Button
            style="@style/ListTab"
            android:onClick="gotoBudgets"
            android:text="@string/tab_budget" />

        <Button
            style="@style/ListTab"
            android:onClick="gotoSchedules"
            android:text="@string/tab_schedule" />

        <Button
            style="@style/ListTab"
            android:onClick="gotoVendors"
            android:text="@string/tab_vendor" />
    </LinearLayout>

    <LinearLayout style="@style/OrderBy">

        <Button
            style="@style/ButtonOrderby"
            android:onClick="orderbyTitle"
            android:text="@string/orderby_title" />

        <Button
            style="@style/ButtonOrderby"
            android:onClick="orderbyStatus"
            android:text="@string/orderby_status" />
    </LinearLayout>

    <ListView
        android:id="@+id/listItems"
        style="@style/ListViewWeight" />

    <LinearLayout style="@style/Toolbar">

        <Button
            style="@style/ButtonAdd"
            android:onClick="openNewItemDialog"
            android:text="@string/btn_new_checklist" />
    </LinearLayout>

    <TextView
        android:id="@+id/help"
        style="@style/PageHelp"
        android:text="@string/help_items" />
</LinearLayout>