<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/newBudgetLayout" style="@style/FormPage"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@+id/titleEditText" android:hint="@string/hint_title" style="@style/FormTitle" />
    <EditText android:id="@+id/noteEditText" android:hint="@string/hint_note" style="@style/FormNote" />
    <LinearLayout style="@style/FormH">
        <TextView android:text="@string/label_budgeted" style="@style/FormLabelBudget" />
        <EditText android:id="@+id/budgetedEditText" android:hint="@string/hint_budget" style="@style/FormValueBudget" />
    </LinearLayout>
    <LinearLayout style="@style/FormH">
        <TextView android:text="@string/label_vendor" style="@style/FormLabelBudget" />
        <EditText android:id="@+id/vendorEditText" android:hint="@string/hint_budget" style="@style/FormValueBudget" />
    </LinearLayout>
    <LinearLayout style="@style/FormH">
        <TextView android:text="@string/label_spent" style="@style/FormLabelBudget" />
        <EditText android:id="@+id/spentEditText" android:hint="@string/hint_budget" style="@style/FormValueBudget" />
    </LinearLayout>
    <LinearLayout style="@style/FormButtons">
        <Button android:id="@+id/formOKBtn" android:text="@string/btn_ok" style="@style/FormButton" />
        <Button android:id="@+id/formCloseBtn" android:text="@string/btn_cancel" style="@style/FormButton" />
    </LinearLayout>
</LinearLayout>